nuevas cosas y foto

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <a href="#" class="logo">PeleaDeRobots</a>
 
         <nav class="navbar"><!--BARRA DE INICIO EN CLASE------------------>
-            <a href="#">Home</a>
-            <a href="#">Abount</a>
-            <a href="#">Skills</a>
-            <a href="#">Portafolio</a>
-            <a href="#">Contact</a>
+            <a href="#" style="--i:1" class="active">Home</a>
+            <a href="#" style="--i:2">Abount</a>
+            <a href="#" style="--i:3">Skills</a>
+            <a href="#" style="--i:4">Portafolio</a>
+            <a href="#" style="--i:5">Contact</a>
         </nav>
 
     </header>
@@ -31,15 +31,73 @@
             <p>Donde cada línea de código es una puerta abierta al futuro digital.</p>
             <div class="home-sci">
 
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="#"><i class='bx bxl-tiktok' ></i></a>
-                <a href="#"><i class='bx bxl-youtube' ></i></a>
+                <a href="#" style="--i:6"><i class='bx bxl-facebook'></i></a>
+                <a href="#" style="--i:7"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="#" style="--i:8"><i class='bx bxl-tiktok'></i></a>
+                <a href="#" style="--i:9"><i class='bx bxl-youtube'></i></a>
             </div>
-
         </div>
-
     </section>
+
+
+
+
+
+    <div class="services" id="services">
+        <div class="container">
+            <h1 class="sub-title">Los<span>Equipos</span></h1>
+            <div class="services-list">
+
+                <div>
+                    <i class='bx bx-bug' style='color:#00f5ff'></i>
+                    <h2>LA MANGOSTA</h2>
+                    <p>"En el campo de batalla, la valentía es nuestra arma más afilada. ¡Avanza con determinación y
+                        deja que tu historia sea contada por las cicatrices que dejas atrás!" </p>
+                    <a href="#" class="read">Mas informacion</a>
+                </div>
+
+                <div>
+                    <i class='bx bx-shield-quarter' style='color:#01ebf3'></i>
+                    <h2>LOS VIKINGOS</h2>
+                    <p>loremdfdfbnkjsdhfkjshdfjkshfkjsdhfsd</p>
+                    <a href="#" class="read">Mas informacion</a>
+                </div>
+
+                <div>
+                    <i class='bx bx-cube-alt' style='color:#00f6ff'></i>
+                    <h2>LAS TRAKAS</h2>
+                    <p>loremdfdfbnkjsdhfkjshdfjkshfkjsdhfsd</p>
+                    <a href="#" class="read">Mas informacion</a>
+                </div>
+
+                <div>
+                    <i class='bx bx-hard-hat' style='color:#00f2fb'></i>
+                    <h2>EL MARTILLAZO</h2>
+                    <p>loremdfdfbnkjsdhfkjshdfjkshfkjsdhfsd</p>
+                    <a href="#" class="read">Mas informacion</a>
+                </div>
+
+                <div>
+                    <i class='bx bx-cheese' style='color:#00f5ff'></i>
+                    <h2>LOS OTAKUS</h2>
+                    <p>loremdfdfbnkjsdhfkjshdfjkshfkjsdhfsd</p>
+                    <a href="#" class="read">Mas informacion</a>
+                </div>
+
+                <div>
+                    <i class='bx bx-leaf' style='color:#00e7f1'></i>
+                    <h2>LA VECINDAD</h2>
+                    <p>loremdfdfbnkjsdhfkjshdfjkshfkjsdhfsd</p>
+                    <a href="#" class="read">Mas informacion</a>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
     <script src="main.js"></script>
 </body>
+
 </html>
